--- a/app/stylesheets/routes/_company.scss
+++ b/app/stylesheets/routes/_company.scss
@@ -68,6 +68,15 @@
   color: $link;
 }
 
+.contact-company-list {
+  margin-bottom: 0;
+}
+
+.company-link {
+  margin: 0;
+  font-size: 14px;
+}
+
 .company-sidebar-view{
   .control-label{
     font-weight: bold;
