--- a/app/stylesheets/routes/_contact.scss
+++ b/app/stylesheets/routes/_contact.scss
@@ -206,6 +206,14 @@
   }
 }
 
+.contact-company {
+  margin-bottom: 0;
+}
+
+.company-link {
+  margin: 0;
+  font-size: 14px;
+}
 
 .sidebar-contact-status-view {
   p {
